add Stacks and Queues data structure

--- a/data structure/day_7.ipynb
+++ b/data structure/day_7.ipynb
@@ -5,13 +5,588 @@
    "id": "e15ab8a7",
    "metadata": {},
    "source": [
-    "# Stacks and Queues"
+    "# Stacks and Queues\n",
+    "\n",
+    "## 1. Stacks\n",
+    "\n",
+    "- A Stack is a linear data structure that follows a particular order in which the operations are performed. \n",
+    "\n",
+    "- The order may be LIFO(Last In First Out) or FILO(First In Last Out). \n",
+    "\n",
+    "- LIFO implies that the element that is inserted last, comes out first and FILO implies that the element that is inserted first, comes out last.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0e193fc",
+   "metadata": {},
+   "source": [
+    "#### Common Operations on Stack:\n",
+    "\n",
+    "In order to make manipulations in a stack, there are certain operations provided to us.\n",
+    "\n",
+    "- **push()** to insert an element into the stack.\n",
+    "\n",
+    "- **pop()** to remove an element from the stack.\n",
+    "\n",
+    "- **top()** Returns the top element of the stack.\n",
+    "\n",
+    "- **isEmpty()** returns true if stack is empty else false.\n",
+    "\n",
+    "- **size()** returns the size of the stack.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "134215e3",
+   "metadata": {},
+   "source": [
+    "#### Stack using Fixed Array\n",
+    "\n",
+    "A stack can be implemented using an array where we maintain:\n",
+    "\n",
+    "- An integer array to store elements.\n",
+    "\n",
+    "- A variable capacity to represent the maximum size of the stack.\n",
+    "\n",
+    "- A variable top to track the index of the top element. Initially, top = -1 to indicate an empty stack.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef4b160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popped: 4\n",
+      "Top element: 3\n",
+      "Is stack empty:  No\n",
+      "Is stack full:  No\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FixedStack:\n",
+    "    # constructor\n",
+    "    def __init__(self, cap):\n",
+    "        self.capacity = cap\n",
+    "        self.arr = [0] * self.capacity\n",
+    "        self.top = -1\n",
+    "\n",
+    "    # push operation\n",
+    "    def push(self, x):\n",
+    "        if self.top == self.capacity - 1:\n",
+    "            print(\"Stack Overflow\")\n",
+    "            return\n",
+    "        self.top += 1\n",
+    "        self.arr[self.top] = x\n",
+    "\n",
+    "    # pop operation\n",
+    "    def pop(self):\n",
+    "        if self.top == -1:\n",
+    "            print(\"Stack Underflow\")\n",
+    "            return -1\n",
+    "        val = self.arr[self.top]\n",
+    "        self.top -= 1\n",
+    "        return val\n",
+    "\n",
+    "    # peek (or top) operation\n",
+    "    def peek(self):\n",
+    "        if self.top == -1:\n",
+    "            print(\"Stack is Empty\")\n",
+    "            return -1\n",
+    "        return self.arr[self.top]\n",
+    "\n",
+    "    # check if stack is empty\n",
+    "    def isEmpty(self):\n",
+    "        return self.top == -1\n",
+    "\n",
+    "    # check if stack is full\n",
+    "    def isFull(self):\n",
+    "        return self.top == self.capacity - 1\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    st = FixedStack(4)\n",
+    "\n",
+    "    # pushing elements\n",
+    "    st.push(1)\n",
+    "    st.push(2)\n",
+    "    st.push(3)\n",
+    "    st.push(4)\n",
+    "\n",
+    "    # popping one element\n",
+    "    print(\"Popped:\", st.pop())\n",
+    "\n",
+    "    # checking top element\n",
+    "    print(\"Top element:\", st.peek())\n",
+    "\n",
+    "    # checking if stack is empty\n",
+    "    print(\"Is stack empty: \", \"Yes\" if st.isEmpty() else \"No\")\n",
+    "\n",
+    "    # checking if stack is full\n",
+    "    print(\"Is stack full: \", \"Yes\" if st.isFull() else \"No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b49f837f",
+   "metadata": {},
+   "source": [
+    "#### Stack Implementation using Dynamic Array\n",
+    "\n",
+    "- When using a fixed-size array, the stack has a maximum capacity that cannot grow beyond its initial size. \n",
+    "\n",
+    "- To overcome this limitation, we can use dynamic arrays. \n",
+    "\n",
+    "- Dynamic arrays automatically resize themselves as elements are added or removed, which makes the stack more flexible.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "15ad1d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popped: 4\n",
+      "Top element: 3\n",
+      "Is stack empty: No\n",
+      "Current size: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DynamicStack:\n",
+    "    def __init__(self):\n",
+    "        self.arr = []\n",
+    "\n",
+    "    # push operation\n",
+    "    def push(self, x):\n",
+    "        self.arr.append(x)\n",
+    "\n",
+    "    # pop operation\n",
+    "    def pop(self):\n",
+    "        if not self.arr:\n",
+    "            print(\"Stack Underflow\")\n",
+    "            return -1\n",
+    "        return self.arr.pop()\n",
+    "\n",
+    "    # peek operation\n",
+    "    def peek(self):\n",
+    "        if not self.arr:\n",
+    "            print(\"Stack is Empty\")\n",
+    "            return -1\n",
+    "        return self.arr[-1]\n",
+    "\n",
+    "    # check if stack is empty\n",
+    "    def isEmpty(self):\n",
+    "        return len(self.arr) == 0\n",
+    "\n",
+    "    # current size\n",
+    "    def size(self):\n",
+    "        return len(self.arr)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    st = DynamicStack()\n",
+    "\n",
+    "    # pushing elements\n",
+    "    st.push(1)\n",
+    "    st.push(2)\n",
+    "    st.push(3)\n",
+    "    st.push(4)\n",
+    "\n",
+    "    # popping one element\n",
+    "    print(\"Popped:\", st.pop())\n",
+    "\n",
+    "    # checking top element\n",
+    "    print(\"Top element:\", st.peek())\n",
+    "\n",
+    "    # checking if stack is empty\n",
+    "    print(\"Is stack empty:\", \"Yes\" if st.isEmpty() else \"No\")\n",
+    "\n",
+    "    # checking current size\n",
+    "    print(\"Current size:\", st.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32f1e68",
+   "metadata": {},
+   "source": [
+    "#### Stack using Linked List\n",
+    "A stack can be implemented using a linked list where we maintain:\n",
+    "\n",
+    "- A Node structure/class that contains:\n",
+    "\n",
+    "    - data → to store the element.\n",
+    "\n",
+    "    - next → pointer/reference to the next node in the stack.\n",
+    "\n",
+    "- A pointer/reference top that always points to the current top node of the stack.\n",
+    "\n",
+    "Initially, top = null to represent an empty stack.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5fddd7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popped: 4\n",
+      "Top element: 3\n",
+      "Is stack empty: No\n",
+      "Current size: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Node structure\n",
+    "class Node:\n",
+    "    def __init__(self, x):\n",
+    "        self.data = x\n",
+    "        self.next = None\n",
+    "\n",
+    "# Stack implementation using linked list\n",
+    "class LinkedStack:\n",
+    "    def __init__(self):\n",
+    "        # initially stack is empty\n",
+    "        self.top = None\n",
+    "        self.count = 0\n",
+    "\n",
+    "    # push operation\n",
+    "    def push(self, x):\n",
+    "        temp = Node(x)\n",
+    "        temp.next = self.top\n",
+    "        self.top = temp\n",
+    "\n",
+    "        self.count += 1\n",
+    "\n",
+    "    # pop operation\n",
+    "    def pop(self):\n",
+    "        if self.top is None:\n",
+    "            print(\"Stack Underflow\")\n",
+    "            return -1\n",
+    "        temp = self.top\n",
+    "        self.top = self.top.next\n",
+    "        val = temp.data\n",
+    "\n",
+    "        self.count -= 1\n",
+    "        return val\n",
+    "\n",
+    "    # peek operation\n",
+    "    def peek(self):\n",
+    "        if self.top is None:\n",
+    "            print(\"Stack is Empty\")\n",
+    "            return -1\n",
+    "        return self.top.data\n",
+    "\n",
+    "    # check if stack is empty\n",
+    "    def isEmpty(self):\n",
+    "        return self.top is None\n",
+    "\n",
+    "    # size of stack\n",
+    "    def size(self):\n",
+    "        return self.count\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    st = LinkedStack()\n",
+    "\n",
+    "    # pushing elements\n",
+    "    st.push(1)\n",
+    "    st.push(2)\n",
+    "    st.push(3)\n",
+    "    st.push(4)\n",
+    "\n",
+    "    # popping one element\n",
+    "    print(\"Popped:\", st.pop())\n",
+    "\n",
+    "    # checking top element\n",
+    "    print(\"Top element:\", st.peek())\n",
+    "\n",
+    "    # checking if stack is empty\n",
+    "    print(\"Is stack empty:\", \"Yes\" if st.isEmpty() else \"No\")\n",
+    "\n",
+    "    # checking current size\n",
+    "    print(\"Current size:\", st.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5a9f6d",
+   "metadata": {},
+   "source": [
+    "#### Applications of Stacks:\n",
+    "\n",
+    "- **Function calls**: Stacks are used to keep track of the return addresses of function calls, allowing the program to return to the correct location after a function has finished executing.\n",
+    "\n",
+    "- **Recursion**: Stacks are used to store the local variables and return addresses of recursive function calls, allowing the program to keep track of the current state of the recursion.\n",
+    "\n",
+    "- **Expression evaluation**: Stacks are used to evaluate expressions in postfix notation (Reverse Polish Notation).\n",
+    "\n",
+    "- **Syntax parsing**: Stacks are used to check the validity of syntax in programming languages and other formal languages.\n",
+    "\n",
+    "- **Memory management**: Stacks are used to allocate and manage memory in some operating systems and programming languages.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17d18354",
+   "metadata": {},
+   "source": [
+    "#### Advantages of Stacks:\n",
+    "- **Simplicity**: Stacks are a simple and easy-to-understand data structure, making them suitable for a wide range of applications.\n",
+    "\n",
+    "- **Efficiency**: Push and pop operations on a stack can be performed in constant time (O(1)), providing efficient access to data.\n",
+    "\n",
+    "- **Last-in, First-out (LIFO)**: Stacks follow the LIFO principle, ensuring that the last element added to the stack is the first one removed. This behavior is useful in many scenarios, such as function calls and expression evaluation.\n",
+    "\n",
+    "- **Limited memory usage**: Stacks only need to store the elements that have been pushed onto them, making them memory-efficient compared to other data structures.\n",
+    "\n",
+    "#### Disadvantages of Stacks:\n",
+    "\n",
+    "- **Limited access**: Elements in a stack can only be accessed from the top, making it difficult to retrieve or modify elements in the middle of the stack.\n",
+    "\n",
+    "- **Potential for overflow**: If more elements are pushed onto a stack than it can hold, an overflow error will occur, resulting in a loss of data.\n",
+    "\n",
+    "- **Not suitable for random access**: Stacks do not allow for random access to elements, making them unsuitable for applications where elements need to be accessed in a specific order.\n",
+    "\n",
+    "- **Limited capacity**: Stacks have a fixed capacity, which can be a limitation if the number of elements that need to be stored is unknown or highly variable.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "611cb78a",
+   "metadata": {},
+   "source": [
+    "### 2. Queue\n",
+    "\n",
+    "- Queue is a linear data structure that stores items in a First In First Out (FIFO) manner. \n",
+    "\n",
+    "- The item that is added first will be removed first. \n",
+    "\n",
+    "- Queues are widely used in real-life scenarios, like ticket booking, or CPU task scheduling, where first-come, first-served rule is followed.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef6d0cb1",
+   "metadata": {},
+   "source": [
+    "#### Operations associated with queue are: \n",
+    "\n",
+    "- Enqueue: Adds an item to the queue. If queue is full, it is said to be an Overflow condition – Time Complexity : $O(1)$\n",
+    "\n",
+    "- Dequeue: Removes an item from the queue. If the queue is empty, it is said to be an Underflow condition – Time Complexity : $O(1)$\n",
+    "\n",
+    "- Front: Get front item from queue – Time Complexity : $O(1)$\n",
+    "\n",
+    "- Rear: Get last item from queue – Time Complexity : $O(1)$\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e1788f",
+   "metadata": {},
+   "source": [
+    "#### Implementation using `list`\n",
+    "Lists can be used as queues, but removing elements from front requires shifting all other elements, making it $O(n)$.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6ec895f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial queue: ['j', 'r', 'z', 'f']\n",
+      "Elements dequeued from queue:\n",
+      "j\n",
+      "r\n",
+      "z\n",
+      "f\n",
+      "Queue after removing elements: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "queue = []\n",
+    "queue.append('j')\n",
+    "queue.append('r')\n",
+    "queue.append('z')\n",
+    "queue.append('f')\n",
+    "print(\"Initial queue:\", queue)\n",
+    "\n",
+    "print(\"Elements dequeued from queue:\")\n",
+    "print(queue.pop(0))\n",
+    "print(queue.pop(0))\n",
+    "print(queue.pop(0))\n",
+    "print(queue.pop(0))\n",
+    "\n",
+    "print(\"Queue after removing elements:\", queue)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c76c1c90",
+   "metadata": {},
+   "source": [
+    "#### Implementation using `collections.deque`\n",
+    "\n",
+    "deque (double-ended queue) is preferred over a list for queues because both append() and popleft() run in O(1) time.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6c629e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial queue: deque(['r', 'z', 'f'])\n",
+      "Elements dequeued from the queue:\n",
+      "r\n",
+      "z\n",
+      "f\n",
+      "Queue after removing elements: deque([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "q = deque()\n",
+    "\n",
+    "q.append('r')\n",
+    "q.append('z')\n",
+    "q.append('f')\n",
+    "print(\"Initial queue:\", q)\n",
+    "\n",
+    "print(\"Elements dequeued from the queue:\")\n",
+    "print(q.popleft())\n",
+    "print(q.popleft())\n",
+    "print(q.popleft())\n",
+    "\n",
+    "print(\"Queue after removing elements:\", q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7e07d4a",
+   "metadata": {},
+   "source": [
+    "#### Implementation using `queue.Queue`\n",
+    "\n",
+    "Python’s queue module provides a thread-safe FIFO queue. You can specify a maxsize. Key Methods are:\n",
+    "\n",
+    "- **put(item) / put_nowait(item)** : Add an element.\n",
+    "\n",
+    "- **get() / get_nowait()** : Remove an element.\n",
+    "\n",
+    "- **empty()** : Check if the queue is empty.\n",
+    "\n",
+    "- **full()** : Check if the queue is full.\n",
+    "\n",
+    "- **qsize()** : Get current size of the queue.\n",
+    "\n",
+    "**Explanation**: queue.Queue class handles thread-safe operations. You can check fullness or emptiness before adding or removing elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d54b9a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial size: 0\n",
+      "Is full: True\n",
+      "Elements dequeued from the queue:\n",
+      "j\n",
+      "s\n",
+      "p\n",
+      "Is empty: True\n",
+      "Is empty: False\n",
+      "Is full: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import Queue\n",
+    "q = Queue(maxsize=3)\n",
+    "print(\"Initial size:\", q.qsize())\n",
+    "\n",
+    "q.put('j')\n",
+    "q.put('s')\n",
+    "q.put('p')\n",
+    "print(\"Is full:\", q.full())\n",
+    "\n",
+    "print(\"Elements dequeued from the queue:\")\n",
+    "print(q.get())\n",
+    "print(q.get())\n",
+    "print(q.get())\n",
+    "print(\"Is empty:\", q.empty())\n",
+    "\n",
+    "q.put(1)\n",
+    "print(\"Is empty:\", q.empty())\n",
+    "print(\"Is full:\", q.full())"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
